assets/stylesheets/common/common.scss
/* ... */
// Styles to make channel list in sidebar match sidebar theme
.sidebar-container {
  .tc-channels {
    color: var(--primary);
    font-size: var(--font-down-1);
    height: unset;
    padding-bottom: 2em;
    width: 100%;
    overflow-x: hidden;

    .chat-channel-divider {
      position: relative;
      text-transform: uppercase;
      padding-left: 2em;

      &:hover {
        .title-caret {
          opacity: 1;
        }
      }
      .title-caret {
        position: absolute;
        top: 0;
      }
    }

    .category-chat-private {
      .d-icon {
        background-color: var(--primary-very-low);
      }
    }

    .new-dm,
    .edit-channel-membership-btn {
      position: absolute;
      right: 2em;
      top: 2px;
      padding: 0.5em;
      border-radius: 0.25em;

      &:hover {
        background-color: var(--tertiary-low);
      }
      .d-icon {
        color: var(--primary-medium);
      }
    }

    .chat-channel-row {
      padding: 0.5em 2em;

      &:hover {
        background-color: var(--tertiary-low);
        .d-icon {
          background-color: var(--tertiary-low);
        }
      }
      .chat-channel-title {
        width: 100%;
        font-weight: unset;
      }
      .chat-channel-row-unread-count {
        display: none;
      }
      &.nested {
        padding-left: 3em;
      }
    }
  }
}

.tc-composer-uploads-container {
  padding: 0.5em 1em 0;
  display: flex;
  justify-content: space-between;

  .uploading-indicator {
    width: calc(100% - 80px);
  }
  .cancel-btn {
    width: 70px;
  }
}

.chat-settings-modal {
  .chat-channel-settings-row {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    align-content: center;
    justify-content: space-between;
    width: 650px;
    padding: 0.75em 0;
    border-bottom: 1px solid var(--primary-low);

    .btn-container {
      display: flex;
      align-content: center;

      .btn {
        margin-left: 0.5em;
      }
    }

    .chat-channel-title {
      color: var(--primary-very-high);
    }

    .chat-channel-row-controls {
      width: 100%;
      padding: 1em 0;

      .controls {
        display: flex;
        flex-direction: row;
        align-items: center;
        margin-top: 0.5em;

        label {
          margin-right: 1em;
          width: 170px;
        }
      }

      .save-container {
        .btn {
          display: inline-block;
        }

        .notification-settings-saved {
          margin-left: 0.5em;
          color: var(--success);
        }
      }
    }
  }
}

.full-page-chat {
  font-family: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
  -moz-osx-font-smoothing: grayscale;
  display: grid;
  grid-template-columns: var(--full-page-sidebar-width) 1fr;
  grid-template-rows: var(--full-page-chat-height);

  .tc-channels {
    background: var(--primary-very-low);
    height: 100%;
    border-right: 1px solid var(--primary-low);
    border-radius: var(--full-page-border-radius) 0 0
      var(--full-page-border-radius);
    .chat-channel-row {
      padding: 0.5em 1em;
      &.nested {
        padding: 0.5em 2em;
      }
      .category-chat-private .d-icon {
        background-color: var(--primary-very-low);
      }
      &:hover {
        .category-chat-private .d-icon {
          background-color: var(--primary-low);
        }
      }
    }
  }

  .tc-full-page-header {
    display: flex;
    align-items: center;
    border-bottom: 1px solid var(--primary-low);

    .exit-chat-btn {
      margin-left: auto;
      color: var(--primary-high);
    }
    .chat-channel-title {
      overflow: hidden;
      white-space: nowrap;
      text-overflow: ellipsis;
      .category-chat-name,
      .topic-chat-name,
      .chat-name {
        color: var(--primary);
      }
    }
    &.previewing {
      .chat-channel-title {
        max-width: calc(100% - 200px);
      }
      .join-channel-btn {
        margin-left: auto;
        width: 110px;
      }
      .exit-chat-btn {
        margin-left: 0.25em;
      }
    }
  }
  .tc-live-pane,
  .tc-messages-scroll,
  .tc-message {
    background: var(--primary-very-low);
    &.highlighted {
      background-color: var(--tertiary-low);
    }
  }
  .tc-live-pane {
    padding: 0 0 1em;
    height: 100%;
    box-sizing: border-box;
    height: var(--full-page-chat-height);
    border-radius: 0 var(--full-page-border-radius)
      var(--full-page-border-radius) 0;
  }

  .not-mobile-device & .tc-message:hover,
  .tc-message.tc-message-selected {
    background: var(--primary-low);
  }
}

.topic-chat-drawer-header {
  .chat-channel-title {
    position: relative;
    max-width: 100%;
  }
  .category-chat-private .d-icon {
    background-color: var(--secondary);
    position: absolute;
    border-radius: 5px;
    padding: 2px 2px 3px;
    color: var(--primary-high);
    height: 0.5em;
    width: 0.5em;
    left: 8px;
    top: -1px;
  }
}

.tc-full-page-header {
  .chat-channel-title {
    position: relative;
    max-width: 100%;
    .dm-usernames {
      overflow: hidden;
      text-overflow: ellipsis;
    }
  }
  .category-chat-private .d-icon {
    background-color: var(--secondary);
    position: absolute;
    border-radius: 5px;
    padding: 2px 2px 3px;
    color: var(--primary-high);
    height: 0.5em;
    width: 0.5em;
    left: 8px;
    top: -1px;
  }
}
/* ... */

